--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* @import '~antd/dist/antd.css'; */
 /* .App {
   text-align: center;
 }
@@ -36,4 +37,10 @@
     transform: rotate(360deg);
   }
 } */
-@import '~antd/dist/antd.css';
+
+/* 滚动条样式 */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  position: absolute;
+}
